[package]
name = "wallhaven-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
winit = "0.28"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
log = "0.4"
log4rs = "1.2"

[dev-dependencies]
rand = "0.8"
